--- a/cite.bib
+++ b/cite.bib
@@ -32,3 +32,16 @@
   year      = {1986},
   series    = {Computers and Typesetting},
 }
+
+@article{吴立新2020透明海洋立体观测网构建,
+author={Lixin Wu and Zhaohui Chen and Xiaopei Lin and Yongzheng Liu},
+title={ “透明海洋”立体观测网构建 },
+organization={中国海洋大学},
+journal={科学通报},
+year={2020},
+volume={65},
+number={25},
+pages={2654-2661},
+month={9},
+}
+
